--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -17,8 +17,9 @@
         >
 
         <RelativeLayout
+            android:background="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             >
 
             <ImageView
@@ -79,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="27dp"
                     android:layout_marginEnd="10dp"
-                    android:text="02 december 2020"
+                    tools:text="02 december 2020"
                     />
             </FrameLayout>
 
