--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
+    android:fitsSystemWindows="true"
+    tools:context=".NewsDetailFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -18,49 +18,49 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            app:titleEnabled="false"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="false">
 
             <ImageView
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/img_of_news"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
                 android:transitionName="img"
-                tools:ignore="UnusedAttribute"
-                android:contentDescription="@string/img_of_news" />
+                app:layout_collapseMode="parallax"
+                tools:ignore="UnusedAttribute" />
 
             <RelativeLayout
                 android:id="@+id/headerContent"
-                app:layout_collapseMode="pin"
-                android:fitsSystemWindows="true"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:orientation="vertical">
+                android:fitsSystemWindows="true"
+                android:orientation="vertical"
+                app:layout_collapseMode="pin">
 
                 <ImageView
                     android:id="@+id/img"
-                    android:src="@drawable/top_shadow"
-                    android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
-                    android:contentDescription="@string/img_top_shadow" />
+                    android:contentDescription="@string/img_top_shadow"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/top_shadow" />
 
                 <ImageView
-                    android:layout_alignParentBottom="true"
-                    android:src="@drawable/bottom_shadow"
                     android:id="@+id/img2"
-                    android:layout_alignBottom="@id/img"
-                    android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:contentDescription="@string/img_shadow" />
+                    android:layout_alignBottom="@id/img"
+                    android:layout_alignParentBottom="true"
+                    android:contentDescription="@string/img_shadow"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/bottom_shadow" />
 
             </RelativeLayout>
 
@@ -77,34 +77,34 @@
 
                 <LinearLayout
                     android:id="@+id/title_appbar"
-                    android:clickable="false"
                     android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/title_on_appbar"
                         style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
-                        tools:text="News for you"
-                        android:textSize="18sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:maxLines="1"
                         android:drawablePadding="10dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:singleLine="true"
-                        android:ellipsize="end"/>
+                        android:textSize="18sp"
+                        tools:text="News for you" />
 
                     <TextView
                         android:id="@+id/subtitle_on_appbar"
                         style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
-                        tools:text="Subtitle"
-                        android:textSize="12sp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:maxLines="1"
                         android:drawablePadding="10dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:singleLine="true"
-                        android:ellipsize="end"/>
+                        android:textSize="12sp"
+                        tools:text="Subtitle" />
 
                 </LinearLayout>
 
@@ -115,39 +115,41 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/colorBackground"
-        android:layout_height="match_parent">
+        android:fitsSystemWindows="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 app:cardCornerRadius="0dp"
                 app:cardElevation="@dimen/cardview_default_elevation"
-                android:layout_height="wrap_content">
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
                 <RelativeLayout
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="20dp"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+
                     <TextView
                         android:id="@+id/title"
-                        android:textColor="@color/colorTextTitle"
-                        android:textStyle="bold"
-                        android:fontFamily="sans-serif-light"
-                        android:textSize="19sp"
-                        tools:text="Title of News"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        />
+                        android:fontFamily="sans-serif-light"
+                        android:textColor="@color/colorTextTitle"
+                        android:textSize="19sp"
+                        android:textStyle="bold"
+                        tools:text="Title of News" />
 
                     <TextView
                         android:id="@+id/time"
@@ -155,41 +157,41 @@
                         android:layout_height="20dp"
                         android:layout_below="@id/title"
                         android:layout_marginTop="10dp"
-                        android:maxLines="1"
                         android:drawablePadding="10dp"
-                        android:singleLine="true"
                         android:ellipsize="end"
+                        android:maxLines="1"
+                        android:singleLine="true"
                         tools:text="a time ago" />
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="0dp"
                 app:cardElevation="@dimen/cardview_default_elevation"
-                app:cardCornerRadius="0dp">
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <ProgressBar
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                         android:id="@+id/progress_bar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="50dp"
                         android:layout_marginBottom="70dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                     <WebView
                         android:id="@+id/webView"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
                 </RelativeLayout>
@@ -202,37 +204,39 @@
 
     <FrameLayout
         android:id="@+id/date_behavior"
-        app:layout_anchor="@+id/appbar"
-        app:behavior_autoHide="true"
-        android:adjustViewBounds="true"
-        app:layout_anchorGravity="right|end|bottom"
-        android:clickable="false"
-        android:layout_below="@id/img"
-        android:background="@drawable/round_white"
         android:layout_width="wrap_content"
-        android:padding="5dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/img"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="410dp"
-        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:background="@drawable/round_white"
+        android:clickable="false"
+        android:padding="5dp"
+        app:behavior_autoHide="true"
+        app:layout_anchor="@+id/appbar"
+        app:layout_anchorGravity="right|end|bottom"
         tools:ignore="UnusedAttribute">
 
         <ImageView
-            android:src="@drawable/ic_date"
             android:layout_width="18dp"
             android:layout_height="18dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:contentDescription="@string/icon_calendar" />
+            android:contentDescription="@string/icon_calendar"
+            android:src="@drawable/ic_date" />
+
         <TextView
-            android:textColor="#606060"
             android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="27dp"
             android:layout_marginEnd="10dp"
-            tools:text="01 January 1990"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:textColor="#606060"
+            tools:text="01 January 1990" />
     </FrameLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
