--- a/app/src/main/res/drawable-mdpi/bottom_navigation_background.xml
+++ b/app/src/main/res/drawable-mdpi/bottom_navigation_background.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorAccent" />
-    <corners android:topLeftRadius="25dp"  android:topRightRadius="25dp"/>
+    <solid android:color="@color/colorPrimary" />
+    <corners
+        android:topLeftRadius="40dp"
+        android:topRightRadius="40dp" />
 </shape>
