--- a/app/src/main/res/layout/activity_twopane.xml
+++ b/app/src/main/res/layout/activity_twopane.xml
@@ -7,11 +7,11 @@
     android:showDividers="middle"
     android:orientation="horizontal">
 
-
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginBottom="-80dp"
         android:layout_weight="1"
         >
     </FrameLayout>
@@ -21,6 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
+        android:layout_marginEnd="8dp"
         >
 
     </FrameLayout>
