--- a/app/src/main/res/layout/activity_twopane.xml
+++ b/app/src/main/res/layout/activity_twopane.xml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:andriod="http://schemas.android.com/apk/res-auto"
-    andriod:divider="?android:attr/dividerHorizontal"
-    android:showDividers="middle"
-    android:orientation="horizontal">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="-80dp"
-        android:layout_weight="1"
-        >
-    </FrameLayout>
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:showDividers="middle"
+        andriod:divider="?android:attr/dividerHorizontal"
+        andriod:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        andriod:layout_constraintEnd_toEndOf="parent"
+        andriod:layout_constraintStart_toStartOf="parent"
+        andriod:layout_constraintTop_toTopOf="parent">
 
-    <FrameLayout
-        android:id="@+id/detail_fragment_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:layout_marginEnd="8dp"
-        >
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="-80dp"
+            android:layout_weight="1" />
 
-    </FrameLayout>
-</LinearLayout>
+        <FrameLayout
+            android:id="@+id/detail_fragment_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="2" />
+
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@drawable/bottom_navigation_background"
+        andriod:itemIconTint="@color/colorAccent"
+        andriod:itemTextColor="@color/white"
+        andriod:layout_constraintBottom_toBottomOf="parent"
+        andriod:layout_constraintEnd_toEndOf="parent"
+        andriod:layout_constraintStart_toStartOf="parent"
+        andriod:layout_constraintTop_toBottomOf="@+id/linear_layout"
+        andriod:menu="@menu/bottom_menu" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
